@@ -42,7 +42,6 @@ Abort if some shell fails to initialize [ignore]. By default, \fIgsh\fR just log
 Print debugging information. Use this option to see exactly what is transferred between \fIgsh\fR and the remote shells. This option can be dynamically toggled using the set_debug command in the control shell.
 .SH "CONTROL COMMANDS"
 Control commands are special purpose commands prefixed by a colon and directed at \fIgsh\fR itself instead of the remote shells. These commands are:
-
 \" BEGIN AUTO-GENERATED CONTROL COMMANDS DOCUMENTATION
 .TP
 \fB:add NAMES...\fR
@@ -71,6 +70,9 @@ List remote shells and their states. The special characters * ? and [] work as e
 .TP
 \fB:log_output [PATH]\fR
 Duplicate every console output into the given local file. If PATH is not given, restore the default behaviour of not logging the output.
+.TP
+\fB:print_read_buffer [SHELLS...]\fR
+Print the data read by remote shells. The special characters * ? and [] work as expected.
 .TP
 \fB:purge [SHELLS...]\fR
 Delete disabled remote shells. This helps to have a shorter list. The special characters * ? and [] work as expected.
