@@ -13,6 +13,7 @@ o Added the :hide_password control command, to use with su(1) for example
 o Added the :reset_prompt control command, for use when launching a shell
 o Added the :replicate control command to do some file transfer between shells
 o Added the :export_rank control command to uniquely identify each shell
+o Added the :print_read_buffer control command to see what gsh just read
 o Common SSH key problems are detected and some help is printed
 o New completion from the local filesystem
 
